--- a/main.tex
+++ b/main.tex
@@ -48,11 +48,12 @@
     \end{center}
 
     \chapter*{Prerequisites}
-    % \input{Sections/pre}
+    \input{Sections/pre}
     
 \chapter{Introduction}
 \input{Sections/high/high}
-% \input{Sections/rpc/rpc}
+\input{Sections/rpc/rpc}
+\input{Sections/rpc_2/rpc_2}
 
 \bibliographystyle{plain} % We choose the "plain" reference style
 \bibliography{refs} % Entries are in the refs.bib file
