--- a/main.tex
+++ b/main.tex
@@ -53,7 +53,8 @@
 \chapter{Introduction}
 % \input{Sections/high/high}
 % \input{Sections/rpc/rpc}
-\input{Sections/rpc_2/rpc_2}
+% \input{Sections/rpc_2/rpc_2}
+\input{Sections/time/time}
 
 \bibliographystyle{plain} % We choose the "plain" reference style
 \bibliography{refs} % Entries are in the refs.bib file
