--- a/main.tex
+++ b/main.tex
@@ -51,9 +51,9 @@
     \input{Sections/pre}
     
 \chapter{Introduction}
-% \input{Sections/high/high}
-% \input{Sections/rpc/rpc}
-% \input{Sections/rpc_2/rpc_2}
+\input{Sections/high/high}
+\input{Sections/rpc/rpc}
+\input{Sections/rpc_2/rpc_2}
 \input{Sections/time/time}
 
 \bibliographystyle{plain} % We choose the "plain" reference style
