--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,8 @@
 \begin{document}
 
 \maketitle
-\setcounter{tocdepth}{2}
+\setcounter{secnumdepth}{2}
+\setcounter{tocdepth}{3}
 
 \tableofcontents
 
