--- a/main.tex
+++ b/main.tex
@@ -52,10 +52,11 @@
     \input{Sections/pre}
     
 \chapter{Introduction}
-\input{Sections/high/high}
-\input{Sections/rpc/rpc}
-\input{Sections/rpc_2/rpc_2}
-\input{Sections/time/time}
+% \input{Sections/high/high}
+% \input{Sections/rpc/rpc}
+% \input{Sections/rpc_2/rpc_2}
+% \input{Sections/time/time}
+\input{Sections/imp_rpc/imp.tex}
 
 \bibliographystyle{plain} % We choose the "plain" reference style
 \bibliography{refs} % Entries are in the refs.bib file
