--- a/Configs/configs.tex
+++ b/Configs/configs.tex
@@ -7,7 +7,7 @@
 \input{Configs/boxes} % This file contains the code for the boxes
 \input{Configs/code.tex} % This file contains the code for the code listings
 \usepackage{adjustbox} % Required for fitting tables into the page width
-
+\usepackage{dirtree} % Required for drawing directory trees
 
 % Packages for math symbols and images
 \usepackage{amssymb} % Math symbols such as \mathbb
