--- a/main.tex
+++ b/main.tex
@@ -56,7 +56,9 @@
 % \input{Sections/rpc/rpc}
 % \input{Sections/rpc_2/rpc_2}
 % \input{Sections/time/time}
-\input{Sections/imp_rpc/imp.tex}
+% \input{Sections/imp_rpc/imp.tex}
+\chapter{Working with Distributed Systems}
+\input{Sections/snap/snap}
 
 \bibliographystyle{plain} % We choose the "plain" reference style
 \bibliography{refs} % Entries are in the refs.bib file
